--- a/pom.xml
+++ b/pom.xml
@@ -15,12 +15,6 @@
   </properties>
 
   <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-        <version>4.11</version>
-      <scope>test</scope>
-    </dependency>
     
     <dependency>
     	<groupId>org.gnu</groupId>
@@ -47,6 +41,17 @@
     	<version>2.2.3</version>
 		<scope>compile</scope>
     </dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.11</version>
+          <scope>test</scope>
+      </dependency>
+      <dependency>
+          <groupId>commons-lang</groupId>
+          <artifactId>commons-lang</artifactId>
+          <version>2.6</version>
+      </dependency>
   </dependencies>
   <build>
   	<defaultGoal>compile</defaultGoal>
